    • Database models: DBHost, DBGroup in SQLite
    • Schema migrations run automatically on startup
    • No server restart needed for host changes

70. AUTO-GENERATED IDS
    • Host ID auto-generated from label as URL-friendly slug
      - "Primary DB" → "primary-db"
      - Handles duplicates by appending numbers: "primary-db-1"
    • Group ID auto-generated from name
      - "Production Servers" → "production-servers"
    • Reduces user input errors
    • ID field hidden in create forms, shown only when editing

71. SECURITY RECOMMENDATIONS
    • Added security warning banner on homepage
    • Recommends using read-only MySQL user with limited access
    • Toggleable SQL instructions to create secure user:
      - CREATE USER 'masc_reader'@'%' IDENTIFIED BY '...'
      - GRANT SELECT ON *.* TO 'masc_reader'@'%'
      - GRANT PROCESS ON *.* (for SHOW PROCESSLIST)
      - GRANT REPLICATION CLIENT (for SHOW SLAVE STATUS)
    • Copy to Clipboard button with green tick animation
    • Warning for admin users: Shows alert when entering privileged
      usernames (root, admin, mysql.sys, etc.) in host forms
    • Encourages principle of least privilege

72. HOMEPAGE HOST GROUPS
    • Available Hosts section organized by DB Groups
    • Groups displayed as collapsible sections with:
      - Group name with colored badge
      - Toggle button to select/deselect all hosts in group
      - Host count display
    • Ungrouped hosts shown in separate section
    • Selected hosts show colored ring matching group color
    • Visual hierarchy for managing large host inventories
    • Consistent with /hosts page grouping

73. COPY TO CLIPBOARD ANIMATION FIX
    • Fixed Copy to Clipboard button not showing green tick
    • Issue: event.target not properly passed in onclick handler
    • Fix: Pass button element directly as function parameter
    • Green checkmark (✓) with "Copied!" text for 2 seconds
    • Applied to both homepage and hosts page SQL copy buttons
